k8s/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: void-drifter
  namespace: void-drifter
spec:
  hostnames:
    - void-drifter.romaine.life
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: main
      namespace: envoy-gateway-system
    - group: gateway.networking.x-k8s.io
      kind: XListenerSet
      name: void-drifter
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: void-drifter-backend
          port: 80
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
